<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewSighting">


    <TextView
        android:id="@+id/postTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/xfont"
        android:text="@string/detail_title"
        android:textColor="@color/colorWhiteBackground"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="1dp"
        android:background="@color/colorWhiteBackground"
        app:layout_constraintBottom_toTopOf="@+id/navigation_temporary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postTitle"
        app:layout_constraintVertical_bias="0.705">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/sightingImageDetailView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/insert_an_image"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userTag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:focusable="true"
                    android:fontFamily="@font/xfont"
                    android:text="@string/detail_user_tag"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/postUser"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/detail_username"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_detail_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:focusable="true"
                    android:fontFamily="@font/xfont"
                    android:text="@string/detail_time"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/postDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:fontFamily="monospace"
                    android:text="@string/detail_default"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/descriptionTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:focusable="true"
                android:fontFamily="@font/xfont"
                android:text="@string/detail_description"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/postDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="monospace"
                android:text="@string/detail_default"
                android:textSize="16sp" />

            <Button
                android:id="@+id/delete_sighting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="monospace"
                android:onClick="onDeleteButtonClicked"
                android:text="@string/delete_this_sighting"
                android:visibility="invisible"/>

        </LinearLayout>
    </ScrollView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/navigation_temporary">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_up_vote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="49dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_up_arrow"
            android:gravity="center|center_vertical"
            android:onClick="onClickUpVote"
            android:text="@string/detail_vote_count" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_down_vote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="49dp"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_down_arrow"
            android:gravity="center|center_vertical"
            android:onClick="onClickDownVote"
            android:text="@string/detail_vote_count" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_temporary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusable="true"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryDark"
        app:itemTextColor="@color/colorPrimary"
        app:itemIconTint="@drawable/bottom_navigation_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation_temporary" />

</androidx.constraintlayout.widget.ConstraintLayout>
